<resources>
    <string name="app_name">Citas</string>
    <string name="getQuotation">Get quotations</string>
    <string name="favoriteQuotation">Favourite quotations</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="quotationShake" translatable="false">Quotation Shake</string>
    <string name="randomQuotation">Random quotations</string>
    <string name="creators">"QuotationShake by     Marcos Esteve Casademunt   Enric Bonet Cortés     Contact      maresca@inf.upv.es    enbocor@inf.upv.es     2019 "</string>
    <string name="username">Name that identifies the user</string>
    <string name="iyname">Insert your name</string>
    <string name="whichlanguage">Quotations will be received in the selected language</string>
    <string name="webrequest">Web request will be performed using the selected HTTP method</string>
    <string name="notuser">nameless</string>
    <string name="refreshToQuotation">Hello %1s!   Press Refresh to get a new quotation</string>
    <string name="sampleQuotation">This is a sample quotation %1sd</string>
    <string name="sampleAuthor">This is a sample author %1sd</string>
    <string name="authorinfo">Author info</string>
    <string name="error">Error not autor</string>
    <string name="delete">Are you sure that you want to delete this quotation?</string>
    <string name="menu_add">add</string>
    <string name="new_quote">New quote</string>
    <string name="deleteAll">Are you sure that you want to delete all your favourite quotations</string>
    <string name="webServices">Web service</string>
    <string name="english">English</string>
    <string name="ruso">Russian</string>
    <string-array name="http">
        <item>GET</item>
        <item>POST</item>
    </string-array>
    <string name="database">Databases</string>
    <string name="selectDatabase">Select the database</string>
</resources>
